--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
 
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*"
+        "ext-curl": "*",
+        "ext-json": "*",
+        "illuminate/support": "5.6.*|5.7.*|5.8.*",
+        "guzzlehttp/guzzle": ">=6.0"
     },
 
     "autoload": {
@@ -31,7 +34,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VMdevelopment\\MyFatoorah\\Providers\\MyFatoorahServiceProfider"
+                "VMdevelopment\\MyFatoorah\\MyFatoorahServiceProfider"
             ]
         }
     }
