--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
 
     "require": {
-        "php": "^7.1",
+        "php": "^8.0|^7.1",
         "ext-curl": "*",
         "ext-json": "*",
         "illuminate/support": "5.6.*|5.7.*|5.8.*",
