--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": "^8.0|^7.1",
         "ext-curl": "*",
         "ext-json": "*",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*|^8.0",
+        "illuminate/support": "5.6.*|5.7.*|5.8.*|^6.0|^7.0|^8.0",
         "guzzlehttp/guzzle": ">=6.0"
     },
 
